[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game/GUI/TextLeft.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Background.png" type="Texture" id=2]
[ext_resource path="res://Fonts/BigelowRules-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/bathroomMirrorFat.png" type="Texture" id=4]
[ext_resource path="res://Assets/bathroomMirror.png" type="Texture" id=5]
[ext_resource path="res://Game/Scripts/UnhealthyEnd.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.288677, 0.383871, 0.509664, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0754099, 0.168925, 0.292499, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.14902, 0.258824, 0.403922, 1 )

[node name="Unhealthy" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="CG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="TextLeft" parent="." instance=ExtResource( 1 )]

[node name="BathroomMirrorReflection" type="TextureRect" parent="."]
margin_left = 1214.0
margin_top = 86.0
margin_right = 1510.0
margin_bottom = 555.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="BathroomMirror" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -959.0
margin_top = -1038.0
margin_right = -319.0
margin_bottom = -347.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="MainMenuButton" type="Button" parent="."]
visible = false
margin_left = 672.0
margin_top = 880.0
margin_right = 961.0
margin_bottom = 1018.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Main Menu"

[connection signal="pressed" from="TextLeft/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]

[editable path="TextLeft"]
